# SCAU-course-tool-rs

./: Cargo.toml  README.md  SCAU-auto-course.py  SCAU-auto-course.spec
docs/: login_api.md
src/: client.rs  login.rs  main.rs
