[package]
name = "scau-course-login"
version = "0.1.0"
edition = "2021"
description = "华南农业大学教务系统自动登录工具"
authors = ["SCAUer"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rsa = "0.9"
num-bigint = "0.4"
num-bigint-dig = "0.8"
base64 = "0.21"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["std"] }
rand = "0.8"
